--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,8 @@
     <actions>
         <group id="MinecraftDevServer.MoveToDevServerGroup"
                class="com.nickawrist.minecraftdevserver.actions.MoveToDevServerGroup"
+               text="Move to Dev Server"
+               description="Move the selected JAR to a Minecraft dev server plugins folder"
                popup="true">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
         </group>
